--- a/01-week.ipynb
+++ b/01-week.ipynb
@@ -295,6 +295,46 @@
     "\n",
     "arithmetic_tests(2, 3.14, 'hi')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1e41ad8",
+   "metadata": {},
+   "source": [
+    "**Day 2: Python Data Types**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2940212c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(True, 57.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def discount_calculator(age, is_student, total_purchase_amount, is_tuesday):\n",
+    "    \"\"\"\n",
+    "    Calculate the discount based on age, student status, and purchase amount.  \n",
+    "    Additional discount if it's Tuesday.\n",
+    "    \"\"\"\n",
+    "    discount_eligible = (age >= 65 or is_student) and total_purchase_amount > 50\n",
+    "    final_price = total_purchase_amount\n",
+    "\n",
+    "    if is_tuesday and discount_eligible:\n",
+    "        final_price *= 0.95\n",
+    "\n",
+    "    return discount_eligible, final_price\n",
+    "\n",
+    "# Test case for discount_calculator function\n",
+    "print(discount_calculator(70, False, 60, True)) "
+   ]
   }
  ],
  "metadata": {
