--- a/01-week.ipynb
+++ b/01-week.ipynb
@@ -335,6 +335,67 @@
     "# Test case for discount_calculator function\n",
     "print(discount_calculator(70, False, 60, True)) "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "499de8fd",
+   "metadata": {},
+   "source": [
+    "**Day 3: Control Structure - Loops**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ff60a4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ********** Welcome to the math quiz game! ********** \n",
+      " Type 'exit' to quit.\n",
+      "\n",
+      "What is 7 * 2?\n",
+      "Correct!\n",
+      "What is 8 - 4?\n",
+      "Correct!\n",
+      "What is 8 * 8?\n",
+      "Wrong! The correct answer is 64.\n",
+      "What is 1 * 4?\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random   \n",
+    "'''\n",
+    "The code below is a simple math quiz game that generates random arithmetic problems for the user to solve.\n",
+    "The user can input their answer and the program will check if it's correct.\n",
+    "The game continues until the user types 'exit'. \n",
+    "'''\n",
+    "\n",
+    "print(\" ********** Welcome to the math quiz game! ********** \\n Type 'exit' to quit.\\n\")\n",
+    "\n",
+    "while input != 'exit':\n",
+    "    num1 = random.randint(1, 10)\n",
+    "    num2 = random.randint(1, 10)\n",
+    "    operator = random.choice(['+', '-', '*', '/'])\n",
+    "    correct_answer = eval(f\"{num1} {operator} {num2}\")\n",
+    "    print(f\"What is {num1} {operator} {num2}?\") \n",
+    "    user_answer = input(\"Your answer: \")\n",
+    "    if user_answer == 'exit':\n",
+    "        break\n",
+    "    try:    \n",
+    "        user_answer = float(user_answer)\n",
+    "        if user_answer == correct_answer:\n",
+    "            print(\"Correct!\")\n",
+    "        else:\n",
+    "            print(f\"Wrong! The correct answer is {correct_answer}.\")\n",
+    "    except ValueError:\n",
+    "        print(\"Invalid input. Please enter a number or 'exit' to quit.\")    \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
