--- a/01-week.ipynb
+++ b/01-week.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "157a0798",
    "metadata": {},
    "outputs": [
@@ -266,6 +266,11 @@
     }
    ],
    "source": [
+    "'''\n",
+    "This script tests various arithmetic operations on different data types.\n",
+    "It uses the eval function to dynamically evaluate expressions and handle exceptions that may arise from invalid operations.\n",
+    "'''\n",
+    "\n",
     "data_types = [4, 3.14, 'hi']\n",
     "operators = ['*', '/', '+', '-', '*', '%', '**', '//', '==','+=', '-=']\n",
     "\n",
