--- a/01-week.ipynb
+++ b/01-week.ipynb
@@ -390,6 +390,7 @@
     "    print(f\"What is {num1} {operator} {num2}?\") \n",
     "    user_answer = input(\"Your answer: \")\n",
     "    if user_answer == 'exit':\n",
+    "        print(\"Thanks for playing!\")\n",
     "        break\n",
     "    try:    \n",
     "        user_answer = float(user_answer)\n",
