--- a/01-week.ipynb
+++ b/01-week.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1ff60a4d",
    "metadata": {},
    "outputs": [
@@ -362,13 +362,11 @@
       " ********** Welcome to the math quiz game! ********** \n",
       " Type 'exit' to quit.\n",
       "\n",
-      "What is 7 * 2?\n",
+      "What is 3 + 6?\n",
       "Correct!\n",
-      "What is 8 - 4?\n",
-      "Correct!\n",
-      "What is 8 * 8?\n",
-      "Wrong! The correct answer is 64.\n",
-      "What is 1 * 4?\n"
+      "What is 7 - 1?\n",
+      "Wrong! The correct answer is 6.\n",
+      "What is 4 + 10?\n"
      ]
     }
    ],
@@ -390,7 +388,6 @@
     "    print(f\"What is {num1} {operator} {num2}?\") \n",
     "    user_answer = input(\"Your answer: \")\n",
     "    if user_answer == 'exit':\n",
-    "        print(\"Thanks for playing!\")\n",
     "        break\n",
     "    try:    \n",
     "        user_answer = float(user_answer)\n",
