--- a/01-week.ipynb
+++ b/01-week.ipynb
@@ -399,6 +399,67 @@
     "        print(\"Invalid input. Please enter a number or 'exit' to quit.\")    \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d9dc1d4",
+   "metadata": {},
+   "source": [
+    "**Day 4: Control Structure - Conditional Statements**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "280fbd20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Day 1: Sedentary\n",
+      "Day 2: Lightly Active\n",
+      "Day 3: Moderately Active\n",
+      "Day 4: Very Active\n",
+      "Day 5: Sedentary\n",
+      "Day 6: Very Active\n",
+      "Day 7: Lightly Active\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''Write a program that interprets a list of daily step counts. For each day’s step count:\n",
+    "\n",
+    "If the steps are less than 5,000, categorize as “Sedentary”.\n",
+    "\n",
+    "If the steps are between 5,000 and 7,499 (inclusive), categorize as “Lightly Active”.\n",
+    "\n",
+    "If the steps are between 7,500 and 9,999 (inclusive), categorize as “Moderately Active”.\n",
+    "\n",
+    "If the steps are 10,000 or more, categorize as “Very Active”.\n",
+    "\n",
+    "Print the day number and the corresponding activity category.'''\n",
+    "\n",
+    "daily_steps = [3000, 6000, 8000, 12000, 4500, 10000, 7000]\n",
+    "activity_categories = []\n",
+    "\n",
+    "for day, steps in enumerate(daily_steps, start=1):\n",
+    "    if steps < 5000:\n",
+    "        category = \"Sedentary\"\n",
+    "    elif 5000 <= steps <= 7499:\n",
+    "        category = \"Lightly Active\"\n",
+    "    elif 7500 <= steps <= 9999:\n",
+    "        category = \"Moderately Active\"\n",
+    "    else:\n",
+    "        category = \"Very Active\"\n",
+    "    \n",
+    "    activity_categories.append((day, category)) \n",
+    "\n",
+    "for day, category in activity_categories:\n",
+    "    print(f\"Day {day}: {category}\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
