--- a/week-2/week-2.ipynb
+++ b/week-2/week-2.ipynb
@@ -308,6 +308,61 @@
     "plt.grid()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7810c65c",
+   "metadata": {},
+   "source": [
+    "**Day 7: Linear Algebra - Matrices and Matrix Operations**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e6c576b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 118  194  322]\n",
+      " [ 264  405  690]\n",
+      " [ 668  895 1610]] \n",
+      "\n",
+      "[[ 118  264  668]\n",
+      " [ 194  405  895]\n",
+      " [ 322  690 1610]] \n",
+      "\n",
+      "[[ 118  264  668]\n",
+      " [ 194  405  895]\n",
+      " [ 322  690 1610]] \n",
+      "\n",
+      "[[-2.81926058e+13 -2.93203101e+13  2.79964834e+13]\n",
+      " [ 1.97348241e+13  2.05242171e+13 -1.95975384e+13]\n",
+      " [-2.81926058e+12 -2.93203101e+12  2.79964834e+12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "mat_X = np.array([[5, 3, 1], [9, 6, 3], [13, 12, 11]])\n",
+    "mat_Y = np.array([[4, 7, 8], [22, 45, 76], [32, 24, 54]])\n",
+    "\n",
+    "mat_XY = mat_X@mat_Y\n",
+    "\n",
+    "mat_XY_T = mat_XY.T\n",
+    "mat_XY_T2 = np.transpose(mat_XY)\n",
+    "\n",
+    "mat_XY_inv = np.linalg.inv(mat_XY_T)\n",
+    "\n",
+    "print(mat_XY, '\\n')\n",
+    "print(mat_XY_T, '\\n')\n",
+    "print(mat_XY_T2, '\\n')\n",
+    "print(mat_XY_inv)"
+   ]
   }
  ],
  "metadata": {
