--- a/week-2/week-2.ipynb
+++ b/week-2/week-2.ipynb
@@ -363,6 +363,27 @@
     "print(mat_XY_T2, '\\n')\n",
     "print(mat_XY_inv)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "932b426e",
+   "metadata": {},
+   "source": [
+    "**Day 8: Linear Algebra - Matrices and Matrix Operations**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "047edacd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sp\n",
+    "from sympy.abc import x\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
   }
  ],
  "metadata": {
