--- a/week-2/week-2.ipynb
+++ b/week-2/week-2.ipynb
@@ -369,7 +369,7 @@
    "id": "932b426e",
    "metadata": {},
    "source": [
-    "**Day 8:  Calculus - Derivatives, Concept and Applications**"
+    "**Day 8:  Calculus - Derivatives**"
    ]
   },
   {
@@ -514,7 +514,7 @@
    "id": "adc744f7",
    "metadata": {},
    "source": [
-    "**Day 9: Calculus - Integrals, Fundamental Theorems, and Applications in Machine Learning**"
+    "**Day 9: Calculus - Integrals, Fundamental Theorems**"
    ]
   },
   {
@@ -621,6 +621,20 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "493a65f4",
+   "metadata": {},
+   "source": [
+    "**Day 10: Probability and Statistics - Basic Concepts, Relevant Distributions**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ea7b21b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
