--- a/week-3/week-3.ipynb
+++ b/week-3/week-3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "98e71478",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c715c66e",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4ca932eb",
    "metadata": {},
    "outputs": [
@@ -249,13 +249,396 @@
        "4  1795.0               7.0                55.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "car_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9abb61d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2059 entries, 0 to 2058\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Make                2059 non-null   object \n",
+      " 1   Model               2059 non-null   object \n",
+      " 2   Price               2059 non-null   int64  \n",
+      " 3   Year                2059 non-null   int64  \n",
+      " 4   Kilometer           2059 non-null   int64  \n",
+      " 5   Fuel Type           2059 non-null   object \n",
+      " 6   Transmission        2059 non-null   object \n",
+      " 7   Location            2059 non-null   object \n",
+      " 8   Color               2059 non-null   object \n",
+      " 9   Owner               2059 non-null   object \n",
+      " 10  Seller Type         2059 non-null   object \n",
+      " 11  Engine              1979 non-null   object \n",
+      " 12  Max Power           1979 non-null   object \n",
+      " 13  Max Torque          1979 non-null   object \n",
+      " 14  Drivetrain          1923 non-null   object \n",
+      " 15  Length              1995 non-null   float64\n",
+      " 16  Width               1995 non-null   float64\n",
+      " 17  Height              1995 non-null   float64\n",
+      " 18  Seating Capacity    1995 non-null   float64\n",
+      " 19  Fuel Tank Capacity  1946 non-null   float64\n",
+      "dtypes: float64(5), int64(3), object(12)\n",
+      "memory usage: 321.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "car_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b17a3aa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newcar_df = car_df[['Make', 'Model', 'Year', 'Price', 'Kilometer']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "648da828",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Kilometer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>Amaze 1.2 VX i-VTEC</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>505000</td>\n",
+       "      <td>87150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Maruti Suzuki</td>\n",
+       "      <td>Swift DZire VDI</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>450000</td>\n",
+       "      <td>75000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hyundai</td>\n",
+       "      <td>i10 Magna 1.2 Kappa2</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>220000</td>\n",
+       "      <td>67000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>Glanza G</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>799000</td>\n",
+       "      <td>37500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>Innova 2.4 VX 7 STR [2016-2020]</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1950000</td>\n",
+       "      <td>69000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Make                            Model  Year    Price  Kilometer\n",
+       "0          Honda              Amaze 1.2 VX i-VTEC  2017   505000      87150\n",
+       "1  Maruti Suzuki                  Swift DZire VDI  2014   450000      75000\n",
+       "2        Hyundai             i10 Magna 1.2 Kappa2  2011   220000      67000\n",
+       "3         Toyota                         Glanza G  2019   799000      37500\n",
+       "4         Toyota  Innova 2.4 VX 7 STR [2016-2020]  2018  1950000      69000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newcar_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "950c980c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Make         object\n",
+       "Model        object\n",
+       "Year          int64\n",
+       "Price         int64\n",
+       "Kilometer     int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newcar_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7b3c9d54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2059, 5)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newcar_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cb14ca0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7e066045",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean price of new cars: 1702991.6964545897\n"
+     ]
+    }
+   ],
+   "source": [
+    "newcar_mean = np.mean(newcar_df['Price'])\n",
+    "\n",
+    "print(\"Mean price of new cars:\", newcar_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "effc0e9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median price of new cars: 825000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "newcar_median = np.median(newcar_df['Price'])\n",
+    "print(\"Median price of new cars:\", newcar_median)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d44f8198",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d4b0fbbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mode price of new cars: ModeResult(mode=np.int64(425000), count=np.int64(26))\n"
+     ]
+    }
+   ],
+   "source": [
+    "newcar_mode = stats.mode(newcar_df['Price'])\n",
+    "print(\"Mode price of new cars:\", newcar_mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1af6d902",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance of new cars price: 5852978276981.123\n"
+     ]
+    }
+   ],
+   "source": [
+    "newcar_variance = np.var(newcar_df['Price'])\n",
+    "print(\"Variance of new cars price:\", newcar_variance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2cc8dc5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard deviation of new cars price: 2419292.9291388267\n"
+     ]
+    }
+   ],
+   "source": [
+    "newcar_std = np.std(newcar_df['Price'])\n",
+    "print(\"Standard deviation of new cars price:\", newcar_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d7261614",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2419880.635434181)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newcar_df['Price'].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8022026f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum price of new cars: 35000000\n",
+      "Minimum price of new cars: 49000\n"
+     ]
+    }
+   ],
+   "source": [
+    "newcar_max = np.max(newcar_df['Price'])\n",
+    "print(\"Maximum price of new cars:\", newcar_max)\n",
+    "newcar_min = np.min(newcar_df['Price'])\n",
+    "print(\"Minimum price of new cars:\", newcar_min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3308b5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1 of new cars price: 484999.0\n",
+      "Q3 of new cars price: 1925000.0\n",
+      "IQR of new cars price: 1440001.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q1 = np.percentile(newcar_df['Price'], 25)\n",
+    "Q3 = np.percentile(newcar_df['Price'], 75)\n",
+    "\n",
+    "IQR = Q3 - Q1\n",
+    "print(\"Q1 of new cars price:\", Q1)\n",
+    "print(\"Q3 of new cars price:\", Q3)\n",
+    "print(\"IQR of new cars price:\", IQR)\n"
    ]
   }
  ],
